[package]
name = "webcalculation"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
bytes = "1.0"
utoipa = { version = "4.0", features = ["axum_extras"] }
